# docs/swagger.json
@@ -12,36 +12,6 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/linebot/message": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "linebot"
-                ],
-                "summary": "uers login",
-                "parameters": [
-                    {
-                        "description": "msg",
-                        "name": "msg",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Push"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/linebot/{lineuserId}/message": {
             "get": {
                 "produces": [
@@ -50,7 +20,7 @@
                 "tags": [
                     "linebot"
                 ],
-                "summary": "uers login",
+                "summary": "fetch messages",
                 "parameters": [
                     {
                         "type": "string",
@@ -68,16 +38,48 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "linebot"
+                ],
+                "summary": "push message",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "lineuserId",
+                        "name": "lineuserId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "msg",
+                        "name": "text",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Text"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
-        "model.Push": {
+        "model.Text": {
             "type": "object",
             "properties": {
-                "lineUserId": {
-                    "type": "string"
-                },
                 "text": {
                     "type": "string"
                 }
